Create system decorator pattern

--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b1df8dfb-e721-4372-b172-be04d0663b56",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-11-24T03:02:02.316829Z",
-     "iopub.status.busy": "2024-11-24T03:02:02.316630Z",
-     "iopub.status.idle": "2024-11-24T03:02:02.344893Z",
-     "shell.execute_reply": "2024-11-24T03:02:02.343911Z",
-     "shell.execute_reply.started": "2024-11-24T03:02:02.316806Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from random import randint\n",
@@ -31,15 +23,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "d8ebbaed-e6eb-4ab2-b1f7-c99c6e792596",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-11-24T03:02:02.345998Z",
-     "iopub.status.busy": "2024-11-24T03:02:02.345633Z",
-     "iopub.status.idle": "2024-11-24T03:02:02.355445Z",
-     "shell.execute_reply": "2024-11-24T03:02:02.354498Z",
-     "shell.execute_reply.started": "2024-11-24T03:02:02.345967Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def all_subclasses(cls):\n",
@@ -51,15 +35,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "c8e8767c-48a0-4210-806b-dfefeea5878e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-11-24T03:02:02.357880Z",
-     "iopub.status.busy": "2024-11-24T03:02:02.357322Z",
-     "iopub.status.idle": "2024-11-24T03:02:02.399209Z",
-     "shell.execute_reply": "2024-11-24T03:02:02.398484Z",
-     "shell.execute_reply.started": "2024-11-24T03:02:02.357836Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class QuantumSystem:\n",
@@ -124,20 +100,57 @@
     "            return [cls.__name__]\n",
     "        \n",
     "        @classmethod\n",
-    "        def validate(cls):\n",
-    "            pass\n",
+    "        def validate(cls, terminant):\n",
+    "            return terminant\n",
+    "        \n",
+    "        @classmethod\n",
+    "        def build_system(cls, anchor, terminant):\n",
+    "            validated = cls.validate(terminant)\n",
+    "            QuantumSystem.add_entity(anchor, **{cls.__name__: validated})\n",
+    "            return anchor\n",
     "        \n",
     "        @classmethod\n",
     "        def get_relationship(cls, entity_id):\n",
     "            try:\n",
     "                return QuantumSystem.v(entity_id).out(cls.__name__).all()['result'][0]['id']\n",
     "            except IndexError:\n",
-    "                raise Exception(f\"{cls.__name__} relationship not found on {entity_id}\")\n",
+    "                return None\n",
     "        \n",
     "        @classmethod\n",
-    "        def build_system(cls, anchor, terminant):\n",
-    "            QuantumSystem.add_entity(anchor, **{cls.__name__: terminant})\n",
-    "            return anchor\n",
+    "        def set_relationship(cls, entity_id, terminant):\n",
+    "            existing = cls.get_relationship(entity_id)\n",
+    "            if existing is not None:\n",
+    "                QuantumSystem.drop(entity_id, cls, cls.validate(existing))\n",
+    "            cls.build_system(entity_id, terminant)\n",
+    "\n",
+    "        @classmethod\n",
+    "        def decorator(cls, entity_id_name=None, returned_name=None):\n",
+    "            entity_id_name = entity_id_name or \"entity_id\"\n",
+    "            returned_name = returned_name or cls.__name__.lower()\n",
+    "        \n",
+    "            def decorator(func):\n",
+    "                def wrapped(*args, **kwargs):\n",
+    "                    if cls.__name__.lower() not in kwargs:\n",
+    "                        entity_id = kwargs[entity_id_name]\n",
+    "                        kwargs[returned_name] = cls.get_relationship(entity_id)\n",
+    "                    return func(*args, **kwargs)\n",
+    "                return wrapped\n",
+    "            return decorator\n",
+    "\n",
+    "        @classmethod\n",
+    "        def d(cls, func):\n",
+    "            return cls.decorator()(func)\n",
+    "\n",
+    "        @classmethod\n",
+    "        def system_decorator(cls, system):\n",
+    "            setattr(system, cls.__name__, cls)\n",
+    "            system.systems.append(cls)\n",
+    "            return system\n",
+    "\n",
+    "        @classmethod\n",
+    "        def sd(cls, system):\n",
+    "            return cls.system_decorator(system)\n",
+    "        \n",
     "        \n",
     "    class HyperSystem:\n",
     "        \"\"\" HyperSystems describe relationships between relationships of nouns \"\"\"\n",
@@ -170,8 +183,19 @@
     "                if len(terminants) != len(cls.systems):\n",
     "                    raise Exception(f\"Missing terminants for {[sys.__name__ for sys in cls.systems[len(terminants):]]}\")\n",
     "            for system, terminant in terminants:\n",
-    "                system.build_system(anchor, terminant)\n",
+    "                if terminant is not None:\n",
+    "                    system.build_system(anchor, terminant)\n",
     "            return anchor\n",
+    "\n",
+    "        @classmethod\n",
+    "        def system_decorator(cls, system):\n",
+    "            setattr(system, cls.__name__, cls)\n",
+    "            system.systems.append(cls)\n",
+    "            return system\n",
+    "\n",
+    "        @classmethod\n",
+    "        def sd(cls, system):\n",
+    "            return cls.system_decorator(system)\n",
     "    \n",
     "    class MetaSystem:\n",
     "        \"\"\" MetaSystems encapsulate HyperSystems and Systems \"\"\"\n",
@@ -208,6 +232,16 @@
     "                system.build_system(meta_anchor, terminant)\n",
     "            QuantumSystem.add_entity(anchor, **{cls.__name__: meta_anchor})\n",
     "            return meta_anchor\n",
+    "\n",
+    "        @classmethod\n",
+    "        def system_decorator(cls, system):\n",
+    "            setattr(system, cls.__name__, cls)\n",
+    "            system.systems.append(cls)\n",
+    "            return system\n",
+    "\n",
+    "        @classmethod\n",
+    "        def sd(cls, system):\n",
+    "            return cls.system_decorator(system)\n",
     "\n",
     "    @classmethod\n",
     "    def reset(cls):\n",
@@ -253,9 +287,10 @@
     "        cls.graph.drop(entity_id, edge_name, system_value)\n",
     "    \n",
     "    @classmethod\n",
-    "    def replace(cls, entity_id, edge_name, old_value, new_value):\n",
+    "    def replace(cls, entity_id, edge_name, old_value, new_value=None):\n",
     "        cls.drop(entity_id, edge_name, old_value)\n",
-    "        cls.put(entity_id, edge_name, new_value)\n",
+    "        if new_value is not None:\n",
+    "            cls.put(entity_id, edge_name, new_value)\n",
     "    \n",
     "    @classmethod\n",
     "    def validate(cls):\n",
@@ -342,14 +377,6 @@
     "        return Image(f'{cls.quantum_system_name}.png')\n",
     "qs = QuantumSystem"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d27d0ea-8105-4b1a-a6a6-baa3c096681c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
