More system semantics updates

--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -144,7 +144,10 @@
     "        @classmethod\n",
     "        def system_decorator(cls, system):\n",
     "            setattr(system, cls.__name__, cls)\n",
-    "            system.systems.append(cls)\n",
+    "            if system.systems is None:\n",
+    "                system.systems = [cls]\n",
+    "            else:\n",
+    "                system.systems.append(cls)\n",
     "            return system\n",
     "\n",
     "        @classmethod\n",
@@ -154,7 +157,7 @@
     "        \n",
     "    class HyperSystem:\n",
     "        \"\"\" HyperSystems describe relationships between relationships of nouns \"\"\"\n",
-    "        systems = []\n",
+    "        systems = None\n",
     "        \n",
     "        @classmethod\n",
     "        def all_hypersystems(cls):\n",
@@ -175,12 +178,16 @@
     "            # print(f\"Building system: {cls} on {anchor} with {terminants}\")\n",
     "            if isinstance(terminants, dict):\n",
     "                try:\n",
-    "                    terminants = [(sys, terminants[sys.__name__]) for sys in cls.systems]\n",
+    "                    terminants = []\n",
+    "                    for sys in cls.systems:\n",
+    "                        terminants.append((sys, terminants[sys.__name__]))\n",
     "                except KeyError:\n",
     "                    raise Exception(f\"Missing terminant for {sys.__name__}\")\n",
     "            else:\n",
     "                terminants = list(zip(cls.systems, terminants))\n",
     "                if len(terminants) != len(cls.systems):\n",
+    "                    print(f\"Got {terminants}\")\n",
+    "                    print(f\"Have systems: {cls.systems}\")\n",
     "                    raise Exception(f\"Missing terminants for {[sys.__name__ for sys in cls.systems[len(terminants):]]}\")\n",
     "            for system, terminant in terminants:\n",
     "                if terminant is not None:\n",
@@ -190,7 +197,10 @@
     "        @classmethod\n",
     "        def system_decorator(cls, system):\n",
     "            setattr(system, cls.__name__, cls)\n",
-    "            system.systems.append(cls)\n",
+    "            if system.systems is None:\n",
+    "                system.systems = [cls]\n",
+    "            else:\n",
+    "                system.systems.append(cls)\n",
     "            return system\n",
     "\n",
     "        @classmethod\n",
@@ -199,7 +209,7 @@
     "    \n",
     "    class MetaSystem:\n",
     "        \"\"\" MetaSystems encapsulate HyperSystems and Systems \"\"\"\n",
-    "        systems = []\n",
+    "        systems = None\n",
     "        \n",
     "        @classmethod\n",
     "        def all_metasystems(cls):\n",
@@ -236,7 +246,10 @@
     "        @classmethod\n",
     "        def system_decorator(cls, system):\n",
     "            setattr(system, cls.__name__, cls)\n",
-    "            system.systems.append(cls)\n",
+    "            if system.systems is None:\n",
+    "                system.systems = [cls]\n",
+    "            else:\n",
+    "                system.systems.append(cls)\n",
     "            return system\n",
     "\n",
     "        @classmethod\n",
