Get mech system working with decorators

--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c8e8767c-48a0-4210-806b-dfefeea5878e",
    "metadata": {},
    "outputs": [],
@@ -178,9 +178,10 @@
     "            # print(f\"Building system: {cls} on {anchor} with {terminants}\")\n",
     "            if isinstance(terminants, dict):\n",
     "                try:\n",
-    "                    terminants = []\n",
+    "                    terminant_tuples = []\n",
     "                    for sys in cls.systems:\n",
-    "                        terminants.append((sys, terminants[sys.__name__]))\n",
+    "                        terminant_tuples.append((sys, terminants[sys.__name__]))\n",
+    "                    terminants = terminant_tuples\n",
     "                except KeyError:\n",
     "                    raise Exception(f\"Missing terminant for {sys.__name__}\")\n",
     "            else:\n",
@@ -227,10 +228,14 @@
     "        \n",
     "        @classmethod\n",
     "        def build_system(cls, anchor, terminants):\n",
+    "            # print(f\"Building: {cls} -- {anchor} -- {terminants}\")\n",
     "            meta_anchor = cls.meta_anchor(anchor)\n",
     "            if isinstance(terminants, dict):\n",
     "                try:\n",
-    "                    terminants = [(sys, terminants[sys.__name__]) for sys in cls.systems]\n",
+    "                    terminant_tuples = []\n",
+    "                    for sys in cls.systems:\n",
+    "                        terminant_tuples.append((sys, terminants[sys.__name__]))\n",
+    "                    terminants = terminant_tuples\n",
     "                except KeyError:\n",
     "                    raise Exception(f\"Missing terminant for {sys.__name__}\")\n",
     "            else:\n",
@@ -390,6 +395,14 @@
     "        return Image(f'{cls.quantum_system_name}.png')\n",
     "qs = QuantumSystem"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9811eb99-a56b-482c-8f51-280c8cadb877",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
