various and sundry

--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -333,8 +333,8 @@
     "                for sys in cls.systems:\n",
     "                    terminant_tuples.append((sys, terminants[sys.__name__]))\n",
     "                terminants = terminant_tuples\n",
-    "            except KeyError:\n",
-    "                raise Exception(f\"Missing terminant for {sys.__name__}\")\n",
+    "            except KeyError as ke:\n",
+    "                raise Exception(f\"Missing terminant for {sys.__name__}\") from ke\n",
     "        else:\n",
     "            terminants = list(zip(cls.systems, terminants))\n",
     "            if len(terminants) != len(cls.systems):\n",
@@ -387,8 +387,8 @@
     "                for sys in cls.systems:\n",
     "                    terminant_tuples.append((sys, terminants[sys.__name__]))\n",
     "                terminants = terminant_tuples\n",
-    "            except KeyError:\n",
-    "                raise Exception(f\"Missing terminant for {sys.__name__}\")\n",
+    "            except KeyError as ke:\n",
+    "                raise Exception(f\"Missing terminant for {sys.__name__}\") from ke\n",
     "        else:\n",
     "            terminants = list(zip(cls.systems, terminants))\n",
     "            if len(terminants) != len(cls.systems):\n",
