misc updates to mechacombat

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -113,7 +113,10 @@
     "        memoryIndex = self.memory.index(trackedObject)\n",
     "        harmonyObject = HarmonyObject.from_tracked_object(\n",
     "            trackedObject, objectType, objectSubType, objectKwargs)\n",
-    "        self.memory[memoryIndex] = harmonyObject"
+    "        self.memory[memoryIndex] = harmonyObject\n",
+    "\n",
+    "    def declareEvent(self, eventType: str, eventFaction: str, eventObject: str, eventValue: str, eventResult: str):\n",
+    "        mc.GameState.declareEvent(eventType, eventFaction, eventObject, eventValue, eventResult)"
    ]
   },
   {
