--- a/harmony/dma/MechaCombat/FactionSystem.ipynb
+++ b/harmony/dma/MechaCombat/FactionSystem.ipynb
@@ -18,16 +18,25 @@
    "outputs": [],
    "source": [
     "class Faction(System):\n",
-    "    \"\"\" A unified group in the game \"\"\"      \n",
+    "    \"\"\" A unified group in the game \"\"\"  \n",
     "    @classmethod\n",
     "    def build_system(cls, anchor, terminant):\n",
+    "        \"\"\" Override default build system to enable lists of/multiple factions \"\"\"\n",
     "        if not isinstance(terminant, list):\n",
     "            terminants = [terminant]\n",
     "        else:\n",
     "            terminants = terminant\n",
-    "            for terminant in terminants:\n",
-    "                QuantumSystem.add_entity(anchor, **{cls.__name__: terminant})\n",
-    "        return anchor"
+    "        for terminant in terminants:\n",
+    "            QuantumSystem.add_entity(anchor, **{cls.__name__: terminant})\n",
+    "        return anchor\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def get_relationship(cls, entity_id):\n",
+    "        stored_faction = super().get_relationship(entity_id)\n",
+    "        if stored_faction is None:\n",
+    "            return \"Unaligned\"\n",
+    "        else:\n",
+    "            return stored_faction"
    ]
   },
   {
