--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -104,7 +104,10 @@
     "    \n",
     "    @classmethod\n",
     "    def replace(cls, entity_id, edge_name, old_value, new_value=None):\n",
-    "        cls.drop(entity_id, edge_name, old_value)\n",
+    "        try:\n",
+    "            cls.drop(entity_id, edge_name, old_value)\n",
+    "        except TypeError:\n",
+    "            pass\n",
     "        if new_value is not None:\n",
     "            cls.put(entity_id, edge_name, new_value)\n",
     "    \n",
@@ -254,10 +257,12 @@
     "    \n",
     "    @classmethod\n",
     "    def get_relationship(cls, entity_id):\n",
-    "        try:\n",
-    "            return QuantumSystem.v(entity_id).out(cls.__name__).all()['result'][0]['id']\n",
-    "        except IndexError:\n",
-    "            return None\n",
+    "        for i in range(5):\n",
+    "            try:\n",
+    "                return QuantumSystem.v(entity_id).out(cls.__name__).all()['result'][0]['id']\n",
+    "            except IndexError:\n",
+    "                pass\n",
+    "        return None\n",
     "    \n",
     "    @classmethod\n",
     "    def set_relationship(cls, entity_id, terminant):\n",
@@ -424,7 +429,16 @@
     "    \"\"\" Simple Integer System \"\"\"\n",
     "    @classmethod\n",
     "    def get_relationship(cls, entity_id):\n",
-    "        return int(super().get_relationship(entity_id))\n",
+    "        stored_value = super().get_relationship(entity_id)\n",
+    "        try:\n",
+    "            stored_value = int(stored_value)\n",
+    "        except TypeError:\n",
+    "            print(f\"Suffered typerror... {entity_id} -- {cls.__name__} -- {stored_value}\")\n",
+    "            print(QuantumSystem.v(entity_id).out(cls.__name__).all())\n",
+    "            print(super().get_relationship(entity_id))\n",
+    "            print(QuantumSystem.v(entity_id).out(cls.__name__).all())\n",
+    "            raise\n",
+    "        return stored_value\n",
     "\n",
     "    @classmethod\n",
     "    def validate(cls, terminant):\n",
