Implement harmony object creation -- break cogdb :'(

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -19,27 +19,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c3ad01fa-71b9-43a3-a5f8-ea0560d88bc6",
+   "execution_count": null,
+   "id": "88b9bf53-f5df-4ee4-ad7b-7631dc7a3a1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "@dataclass\n",
     "class HarmonyObject(TrackedObject):\n",
-    "    rsc: object\n",
+    "    oid: str = None\n",
     "    objectType: str = None\n",
     "    objectSubType: str = None\n",
     "    objectKwargs: dict = None\n",
     "\n",
-    "    objectFactories = {\"Mech\": mc.MechFactories, \"Structure\": mc.StructureFactories}\n",
+    "    objectFactories = {\"Unit\": mc.MechFactories, \"Structure\": mc.StructureFactories}\n",
     "    \n",
     "    def __post_init__(self):\n",
-    "        super().__post_init__(self)\n",
+    "        super().__post_init__()\n",
+    "        print(f\"Creating {self.objectType} -- {self.objectSubType} -- {self.objectKwargs}\")\n",
+    "        self.objectKwargs = {key.lower(): value for key, value in self.objectKwargs.items()}\n",
     "        try:\n",
     "            factory = self.objectFactories[self.objectType][self.objectSubType]\n",
     "        except KeyError as ke:\n",
     "            raise Exception(f\"Unrecognized object type and subtype - {objectType}-{objectSubType}\")\n",
-    "        factory(self.oid, **objectKwargs)\n",
+    "        factory(self.oid, faction=\"Unaligned\", **self.objectKwargs)\n",
     "\n",
     "    @classmethod\n",
     "    def from_tracked_object(cls,\n",
@@ -47,17 +49,21 @@
     "                            objectType: str,\n",
     "                            objectSubType: str,\n",
     "                            objectKwargs: dict):\n",
+    "        # if not qs.entity_exists(trackedObject.oid):\n",
+    "        print(f\"Creating {objectType} object from {trackedObject}\")\n",
+    "        return cls(\n",
+    "            changeSet=trackedObject.changeSet,\n",
+    "            oid=trackedObject.oid,\n",
+    "            objectType=objectType,\n",
+    "            objectSubType=objectSubType,\n",
+    "            objectKwargs=objectKwargs)\n",
     "\n",
-    "        if qs.entity_exists(trackedObject.oid):\n",
-    "            harmonyObject = cls(trackedObject.changeSet, objectType, objectSubType, objectKwargs)\n",
-    "            harmonyObject.oid = trackedObject.oid\n",
-    "            return harmonyObject\n",
-    "        else:\n",
-    "            return cls(trackedObject.changeSet, objectType, objectSubType, objectKwargs)\n",
+    "        \n",
+    "    def previousVersion(self):\n",
+    "        return TrackedObject({camName: change.lastChange if change is not None else None for camName, change in self.changeSet.items()})\n",
     "\n",
-    "\n",
-    "    def take_action(self, target, result=None):\n",
-    "        return ObjectAction(self, self.rsc, target, result=result, rsc=self.rsc)"
+    "    def rename(self):\n",
+    "        raise NotImplementedError(\"Urgh\")"
    ]
   },
   {
@@ -116,7 +122,10 @@
     "        self.memory[memoryIndex] = harmonyObject\n",
     "\n",
     "    def declareEvent(self, eventType: str, eventFaction: str, eventObject: str, eventValue: str, eventResult: str):\n",
-    "        mc.GameState.declareEvent(eventType, eventFaction, eventObject, eventValue, eventResult)"
+    "        mc.GameState.declareEvent(eventType, eventFaction, eventObject, eventValue, eventResult)\n",
+    "\n",
+    "    def take_action(self, actor, target, result=None):\n",
+    "        return ObjectAction(actor, target, result=result, rsc=self.rsc)"
    ]
   },
   {
