--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -77,9 +77,10 @@
     "            except Exception as e:\n",
     "                print(f\"Failed to create entity: {entity_id}, {rel_name}, {rel_value}\")\n",
     "                print(f\"Exception: {e}\")\n",
-    "                print(type(entity_id))\n",
-    "                print(type(rel_name))\n",
-    "                print(type(rel_value))\n",
+    "                print(type(entity_id), entity_id)\n",
+    "                print(type(rel_name), rel_name)\n",
+    "                print(type(rel_value), rel_value)\n",
+    "                print(f\"Attempting to create {entity_id} relationships: {relationships}\")\n",
     "                raise\n",
     "    \n",
     "    @classmethod\n",
@@ -429,16 +430,7 @@
     "    \"\"\" Simple Integer System \"\"\"\n",
     "    @classmethod\n",
     "    def get_relationship(cls, entity_id):\n",
-    "        stored_value = super().get_relationship(entity_id)\n",
-    "        try:\n",
-    "            stored_value = int(stored_value)\n",
-    "        except TypeError:\n",
-    "            print(f\"Suffered typerror... {entity_id} -- {cls.__name__} -- {stored_value}\")\n",
-    "            print(QuantumSystem.v(entity_id).out(cls.__name__).all())\n",
-    "            print(super().get_relationship(entity_id))\n",
-    "            print(QuantumSystem.v(entity_id).out(cls.__name__).all())\n",
-    "            raise\n",
-    "        return stored_value\n",
+    "        return int(super().get_relationship(entity_id))\n",
     "\n",
     "    @classmethod\n",
     "    def validate(cls, terminant):\n",
