--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -492,11 +492,15 @@
     "\n",
     "@dataclass\n",
     "class TrackedObject(ChangeSet):\n",
+    "    oid: str = None\n",
+    "    \n",
     "    def __eq__(self, other):\n",
     "        return super().__eq__(other)\n",
     "\n",
     "    def __post_init__(self):\n",
-    "        self.oid = str(uuid4())\n",
+    "        if self.oid is None:\n",
+    "            self.oid = str(uuid4())\n",
+    "\n",
     "        try:\n",
     "            self.icon = sorted([cs.after for cs in self.changeSet.values()\n",
     "                                if cs is not None and cs.changeType != \"delete\"],\n",
@@ -719,7 +723,7 @@
     "                objDef[camName] = self.classifyCameraChange(cameras[camName], change)\n",
     "            else:\n",
     "                objDef[camName] = None\n",
-    "        return TrackedObject(objDef)\n",
+    "        return TrackedObject(changeSet=objDef)\n",
     "\n",
     "    def camCommitChange(self, classifiedChange):\n",
     "        overlaps = self.changeOverlaps(classifiedChange)\n",
@@ -778,7 +782,7 @@
     "        for capture in self.memory:\n",
     "            if capture.oid == objectId:\n",
     "                return capture\n",
-    "        raise Exception(f\"Unable to find object: {object_id}\")\n",
+    "        raise Exception(f\"Unable to find object: {objectId}\")\n",
     "\n",
     "    def deleteObject(self, oid):\n",
     "        memCaps = {cap.oid: cap for cap in self.memory}\n",
