--- a/harmony/dma/MechaCombat/GameEventSystem.ipynb
+++ b/harmony/dma/MechaCombat/GameEventSystem.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "    @classmethod\n",
     "    def get_events(cls, anchor):\n",
-    "        return [e['id'] for e in qs.v(anchor).out(cls.__name__).all()['result']]\n",
+    "        return qs.get(anchor, cls)\n",
     "\n",
     "    @classmethod\n",
     "    def move_event(cls, gameEvent, oldAnchor, newAnchor):\n",
@@ -150,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
