--- a/harmony/dma/MechaCombat/FactionSystem.ipynb
+++ b/harmony/dma/MechaCombat/FactionSystem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "50874f84-ebff-4b6c-bacf-b801ae8ca34b",
    "metadata": {},
    "outputs": [],
@@ -12,27 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2a04e001-2337-4a1f-ae7b-cc5eaeb31072",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Faction(System):\n",
-    "    \"\"\" A unified group in the game \"\"\"  \n",
+    "    \"\"\" A unified group in the game \"\"\" \n",
+    "\n",
     "    @classmethod\n",
-    "    def build_system(cls, anchor, terminant):\n",
-    "        \"\"\" Override default build system to enable lists of/multiple factions \"\"\"\n",
-    "        if not isinstance(terminant, list):\n",
-    "            terminants = [terminant]\n",
-    "        else:\n",
-    "            terminants = terminant\n",
-    "        for terminant in terminants:\n",
-    "            QuantumSystem.add_entity(anchor, **{cls.__name__: terminant})\n",
-    "        return anchor\n",
-    "    \n",
-    "    @classmethod\n",
-    "    def get_relationship(cls, entity_id):\n",
-    "        stored_faction = super().get_relationship(entity_id)\n",
+    "    def get_relationship(cls, entity):\n",
+    "        stored_faction = super().get_relationship(entity)\n",
     "        if stored_faction is None:\n",
     "            return \"Unaligned\"\n",
     "        else:\n",
@@ -64,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
