Action declaration/resolution

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -83,6 +83,18 @@
     "    # ARCH: How to get `distanceBetweenObjects` function from app\n",
     "    def __post_init__(self):\n",
     "        assert self.rsc is not None, f\"Object Actions require a RealSpace Converter\"\n",
+    "        if self.target is None:\n",
+    "            self.targetDistance = None\n",
+    "            self.targetRange = None\n",
+    "            self.rangeModifier = None\n",
+    "            self.objMovement = None\n",
+    "            self.aMM = None\n",
+    "            self.targetMovement = None\n",
+    "            self.tMM = None\n",
+    "            self.skill = None\n",
+    "            self.targetNumber = None\n",
+    "            self.gameEvent = None\n",
+    "            return\n",
     "        self.targetDistance = self.rsc.distanceBetweenObjects(self.actor, self.target)\n",
     "        self.targetRange = \"short\" if self.targetDistance < 155 else \"medium\" if self.targetDistance < 610 else \"long\"\n",
     "        self.rangeModifier = 0 if \"short\" else 2 if \"medium\" else 4\n",
