--- a/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -129,10 +129,13 @@
     "        #    * instantiation should all create existing graph change set?\n",
     "        match gameeventtype:\n",
     "            case \"Move\":\n",
+    "                print(f\"{gameeventobject} moving to {gameeventresult}\")\n",
     "                Move.move(entity=gameeventobject, delta=json.loads(gameeventresult))\n",
     "            case \"Attack\":\n",
     "                print(f\"{gameeventvalue} taking damage {gameeventresult}\")\n",
     "                UnitDamage.take_damage(entity=gameeventvalue, damage_value=int(gameeventresult))\n",
+    "            case \"NoAction\":\n",
+    "                print(f\"{gameeventobject} taking no action\")\n",
     "            case _:\n",
     "                raise Exception(f\"Unrecognized Event Type: {gameeventtype}\")\n",
     "\n",
