--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -50,7 +50,7 @@
     "        cur.close()\n",
     "    \n",
     "    def reset(self):\n",
-    "        self.conn = sqlite3.connect(f\":memory:\", check_same_thread=False)\n",
+    "        self.conn = sqlite3.connect(\"file:dma?mode=memory&cache=shared\", uri=True, check_same_thread=False)\n",
     "        with self.cursor() as cur:\n",
     "            cur.execute(\"\"\"CREATE TABLE edges (\n",
     "                start_node TEXT NOT NULL,\n",
@@ -502,7 +502,7 @@
     "    def get_relationship(cls, entity):\n",
     "        return {system.__name__: system.get_relationship(entity) for system in cls.systems}\n",
     "    \n",
-    "    def __post_init__(self):\n",
+    "    def update_system_attributes(self):\n",
     "        for sys in self.systems:\n",
     "            sys_value = getattr(self, sys.__name__)\n",
     "            if sys_value is not None:\n",
@@ -512,10 +512,15 @@
     "                    sys(self.entity, sys_value)\n",
     "            setattr(self, sys.__name__, sys(self.entity))\n",
     "\n",
+    "    def __post_init__(self):\n",
+    "        self.update_system_attributes()\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class MetaSystem(HyperSystem):\n",
     "    \"\"\" MetaSystems encapsulate systems a degree removed from their anchor \"\"\"\n",
+    "    anchor: str = None\n",
+    "\n",
     "    systems = None\n",
     "\n",
     "    @classmethod\n",
@@ -531,8 +536,12 @@
     "        return {system.__name__: system.get_relationship(cls.meta_anchor(entity)) for system in cls.systems}\n",
     "    \n",
     "    def __post_init__(self):\n",
-    "        setattr(self, \"meta_anchor\", self.meta_anchor(self.entity))\n",
-    "        QuantumSystem.add_entity(self.meta_anchor, **{type(self).__name__: self.entity})\n",
+    "        if self.anchor is None:\n",
+    "            setattr(self, \"meta_anchor\", self.meta_anchor(self.entity))\n",
+    "            QuantumSystem.add_entity(self.meta_anchor, **{type(self).__name__: self.entity})\n",
+    "            self.anchor = self.meta_anchor\n",
+    "        else:\n",
+    "            setattr(self, \"meta_anchor\", self.anchor)\n",
     "        for sys in self.systems:\n",
     "            sys_value = getattr(self, sys.__name__)\n",
     "            if sys_value is not None:\n",
@@ -540,7 +549,7 @@
     "                    sys(self.meta_anchor, **sys_value)\n",
     "                else:\n",
     "                    sys(self.meta_anchor, sys_value)\n",
-    "            setattr(self, sys.__name__, sys(self.meta_anchor))"
+    "            setattr(self, sys.__name__, sys(self.anchor))"
    ]
   },
   {
